# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.52)

AC_INIT([AV viewer], [0.10.0], [gatos-devel@lists.sf.net])
AC_CONFIG_SRCDIR([frequencies.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

AC_PATH_XTRA

AC_ARG_WITH(ffmpeg, [  --with-ffmpeg=path      Path to compiled ffmpeg source tree])
AC_ARG_ENABLE(alsa, [  --disable-alsa          Do not use ALSA sound library])

AC_CHECK_LIB([dl], [dlopen])
AC_CHECK_LIB([m], [sin])
AC_CHECK_LIB([pthread], [pthread_create])
AC_CHECK_LIB([asound], [snd_card_get_name])

ALSA_PRESENT=no
if ! test "$enable_alsa" = "no" ; then

  if test "$ac_cv_lib_asound_snd_card_get_name" = "yes" ; then
  AC_TRY_LINK([#include <alsa/asoundlib.h> 
	     #if (SND_LIB_MAJOR != 0) || (SND_LIB_MINOR < 9)  
	     #error "Avview requires ALSA version 0.9.x" 
	     #endif], ,AC_DEFINE(USE_ALSA) ALSA_PRESENT=yes,)
  fi

  if test "$ALSA_PRESENT" = "no" ; then
  echo "** Avview requires ALSA version 0.9.x"
  fi

else

ALSA_PRESENT=disabled

fi

AC_CHECK_HEADER(linux/videodev.h, ,echo "Avview requires video4linux support. You may want to upgrade to Linux 2.4.x."; exit)

AC_CHECK_HEADER(/usr/include/tcl.h, TCL_HEADERS=-I/usr/include)
AC_CHECK_HEADER(/usr/local/include/tcl.h, TCL_HEADERS=-I/usr/local/include)
AC_CHECK_HEADER(/usr/include/tcl8.3/tcl.h, TCL_HEADERS=["$TCL_HEADERS -I/usr/include/tcl8.3"])


AC_CHECK_LIB([X11], [XCreateSimpleWindow],,,[$X_LIBS])
AC_CHECK_LIB([Xext], [XInitExtension],,,[$X_LIBS])
AC_CHECK_LIB([Xv], [XvPutVideo],,,[$X_LIBS -lX11 -lXext])
AC_CHECK_LIB([tcl8.3], [Tcl_Init],,,[$X_LIBS])
AC_CHECK_LIB([tk8.3], [Tk_Init],,,[$X_LIBS])

CFLAGS="$CFLAGS $X_CFLAGS"
AC_CHECK_HEADER(/usr/include/tk.h, TK_HEADERS=-I/usr/include,,[ ])
AC_CHECK_HEADER(/usr/local/include/tk.h, TK_HEADERS=-I/usr/local/include,,[ ])
AC_CHECK_HEADER(/usr/include/tk8.3/tk.h, TK_HEADERS=["$TK_HEADERS -I/usr/include/tk8.3"],,[ ])

AC_SUBST(X_CFLAGS)
AC_SUBST(X_LIBS)
AC_SUBST(X_EXTRA_LIBS)
AC_SUBST(X_PRE_LIBS)
AC_SUBST(LIBS)

if ! test "$with_ffmpeg" = "" ; then
AC_DEFINE(USE_FFMPEG)
FFMPEG_LIBS="-L$with_ffmpeg/libav -L$with_ffmpeg/libavcodec -lavformat -lavcodec -lpthread"
FFMPEG_CFLAGS="-I$with_ffmpeg/libav -I$with_ffmpeg/libavcodec"
else
FFMPEG_LIBS=
FFMPEG_CFLAGS=
fi

AC_SUBST(FFMPEG_LIBS)
AC_SUBST(FFMPEG_CFLAGS)
AC_SUBST(TCL_HEADERS)
AC_SUBST(TK_HEADERS)

AC_HEADER_STDC
AC_CHECK_HEADERS([errno.h fcntl.h stdlib.h string.h sys/ioctl.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS([memset strdup strerror])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

if test "no_x" = "yes" ; then
	AC_MSG_ERROR([can not find X11])
fi

echo ""
echo "------------------- Configuration -------------------"
echo ""
echo "  X11 libraries                    $X_LIBS"
echo "  X11 cflags                       $X_CFLAGS"
echo "  TCL headers                      $TCL_HEADERS"
echo "  TK headers                       $TK_HEADERS"
echo "  ALSA support                     $ALSA_PRESENT"
if test "$with_ffmpeg" = "" ; then
echo "  Movie recording                  disabled"
echo "         to enable specify --with-ffmpeg=/path/to/compiled/ffmpeg/source"
else
echo "  Movie recording                  enabled"
echo "  Path to compiled ffmeg source    $with_ffmpeg"
fi
echo ""

if test "$with_ffmpeg" = "yes" || test "$with_ffmpeg" = "no"; then
echo ""
echo "   **** POSSIBLE MISCONFIGURATION DETECTED ****"
echo ""
echo "The proper way to specify path to ffmpeg tree is by using"
echo "              --with-ffmpeg=/path/to/ffmpeg/tree"
echo ""
echo "while what you used is likely: --with-ffmpeg /path/to/ffmpeg/tree"
echo ""
echo "Unless this tree is really in directory named \"yes\" or \"no\" please"
echo "restart ./configure with the correct parameter syntax"
echo ""
fi


